<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home2"
        android:title="@string/home_title" />

    <item
        android:id="@+id/navigation_services"
        android:icon="@drawable/ic_services"
        android:title="@string/services_title" />

    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/ic_cart"
        android:title="@string/cart_title" />

    <item
        android:id="@+id/navigation_loyalty"
        android:icon="@drawable/ic_loyalty"
        android:title="@string/loyalty_nav_title" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile_title" />
</menu>